testsuite/escript/classes/fail-super-base-no-ctor.err
fail-super-base-no-ctor.src:10:5: error: In call to 'super': No base class defines a constructor.